--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-   <meta charset="utf-8">
+  <meta charset="utf-8">
   <link rel="icon" href="images/logo1.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organizing Committee</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" type="text/css" href="icomoon/icomoon.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/vendor.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&family=Roboto+Slab&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&amp;family=Roboto+Slab&amp;display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 text-gray-800">
   <!-- Header -->
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 ">
@@ -26,25 +26,17 @@
           <img style="height: 80px;" src="images/logo.gif" alt="logo" class="img-fluid">
         </a>
       </div>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-        aria-controls="offcanvasNavbar">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-
         <div class="offcanvas-header">
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-
         <div class="offcanvas-body justify-content-end">
-
           <ul class="navbar-nav menu-list list-unstyled align-items-lg-center d-flex gap-md-3 mb-0">
-
             <li class="nav-item dropdown">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages"
-                data-bs-toggle="dropdown" aria-expanded="false">Information of Authors</a>
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Information of Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li><a href="crucialdates.html" class="dropdown-item">Crucial Dates</a></li>
                 <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
@@ -53,7 +45,6 @@
                 <li><a href="awards.html" class="dropdown-item">Awards</a></li>
               </ul>
             </li>
-
             <li class="nav-item">
               <a href="organizingcommittee.html" class="nav-link mx-0.8">Organizing Committee</a>
             </li>
@@ -63,10 +54,8 @@
             <li class="nav-item">
               <a href="technicalprogramcommittee.html" class="nav-link mx-0.8">Technical Program Committee</a>
             </li>
-
             <li class="nav-item dropdown">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="shop"
-                data-bs-toggle="dropdown" aria-expanded="false">More</a>
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="shop" data-bs-toggle="dropdown" aria-expanded="false">More</a>
               <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shop">
                 <li><a href="sponsorship.html" class="dropdown-item">Technical/Financial Sponsorship</a></li>
                 <li><a href="venue.html" class="dropdown-item">Conference Venue</a></li>
@@ -75,21 +64,15 @@
               </ul>
             </li>
           </ul>
-
           <div class="d-none d-lg-flex align-items-center ms-5">
             <ul class="d-flex justify-content-end  list-unstyled m-0">
-
             </ul>
-
           </div>
-
         </div>
       </div>
-
     </div>
     <div class="container-fluid d-lg-none">
       <div class="d-flex  align-items-end mt-3">
-
       </div>
     </div>
   </nav>
@@ -99,9 +82,9 @@
     <p class="mb-6">Meet the esteemed members of our Organizing Committee, dedicated to making this conference a success:</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item1.jpg" alt="Member 1" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Jane Doe</h2>
-        <p class="text-sm text-gray-600">Conference Chair</p>
+        <img src="images/veer.jpeg" alt="Member 1" class="w-24 h-24 mx-auto rounded-full mb-3 img-thumbnail">
+        <h2 class="text-lg font-bold">Dr. Veerpratap Meena</h2>
+        <p class="text-sm text-gray-600"><b>Conference Chair</b></p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
         <img src="images/item2.jpg" alt="Member 2" class="w-24 h-24 mx-auto rounded-full mb-3">
@@ -121,14 +104,14 @@
       <div class="row">
         <div class="col-md-4 my-3">
           <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> 30 E Lake St,
-            Chicago, USA</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (510) 710-3464</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: </span>
-            info@ICE2CPT.com
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> 30 E Lake St, Chicago, USA
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (510) 710-3464
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: </span> info@ICE2CPT.com
           </p>
         </div>
         <div class="col-md-2 my-3">
@@ -141,7 +124,7 @@
               <li class="menu-item mb-2">
                 <a href="about.html" class="footer-link">About us</a>
               </li>
-               <li class="menu-item mb-2">
+              <li class="menu-item mb-2">
                 <a href="contact.html" class="footer-link">Contact</a>
               </li>
             </ul>
@@ -190,7 +173,6 @@
                     <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
                   </a>
                 </li>
-
               </ul>
             </div>
           </div>
@@ -198,7 +180,6 @@
       </div>
     </div>
   </footer>
-
   <div id="footer-bottom">
     <hr class="m-0 text-black-50">
     <div class="container py-3">
@@ -209,15 +190,13 @@
       </div>
     </div>
   </div>
-
-  
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
- </body>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
+</body>
+
 </html>
