--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
       </div>
       <div class="row text-center text-capitalize w-100" style=""><img src="images/logo.gif" alt="img" class="img-fluid custom-img img-thumbnail w-25 h-25 float-left" style="" width="0" height="0">
         <div class="col-md-8" style="">
-          <h1 contenteditable="true" class="text-center h-25 text-capitalize w-100 my-5">International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend</h1>
+          <h1 class="text-center text-capitalize w-100 my-5" style="">International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend</h1>
+          <h1 class="text-center text-capitalize w-100 my-5">OCTOBER 29 - 31 2025</h1>
         </div>
       </div>
     </div>
