--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="container-fluid">
       <div class="main-logo">
         <a href="index.html">
-          <img style="height: 80px;" src="images/logo.gif" alt="logo" class="img-fluid">
+          <img style="height: 80px;" src="images/logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="90" height="90">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -173,7 +173,7 @@
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid img-thumbnail mx-auto w-100 h-75" src="images/nitj.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100 my-5 mx-auto border h-75 rounded p-2 py-5" src="images/nitj.jpg">
               </div>
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
                 <div class="carousel-caption">
