--- a/crucialdates.html
+++ b/crucialdates.html
@@ -21,7 +21,7 @@
   <!-- Header -->
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-lg-4 py-lg-4 mx-auto">
     <!-- Links above the navbar -->
-    <div class="w-100 bg-light py-2 border-bottom">
+    <!-- <div class="w-100 bg-light py-2 border-bottom">
       <div class="container d-flex justify-content-between align-items-center">
         <a href="faq.html" class="text-dark text-decoration-none">1</a>
         <a href="support.html" class="text-dark text-decoration-none">2</a>
@@ -31,6 +31,25 @@
         </a>
         <a href="index.html">
           <img style="height: 25px;" src="images/IEEE-Banglore.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="25">
+        </a>
+      </div>
+    </div> -->
+    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 40px;" >
+      <div class="container d-flex justify-content-between align-items-center">
+        <a target="_blank" href="https://nitjsr.ac.in/">
+          <img style="height: 55px;" src="images/NITJSRlOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="60" height="40">
+        </a>
+        <a target="_blank" href="https://ieeenitjsr.netlify.app/">
+          <img style="height: 55px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="25">
+        </a>
+        <!-- <a href="index.html">
+          <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a> -->
+        <a target="_blank" href="index.html">
+          <img style="height: 55px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a>
+        <a target="_blank" href="https://www.ieee.org/">
+          <img style="height: 55px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
@@ -93,15 +112,16 @@
     </div>
   </nav>
   <!-- Main Content -->
-  <main class="container mx-auto p-6">
+  <main class="container mx-auto p-6" style="padding-top: 100px;">
     <h1 class="text-4xl font-bold mb-4 mt-40">Crucial Dates</h1>
     <p class="mb-6">Below are the important dates for the conference. Please make sure to adhere to these deadlines.</p>
     <ul class="list-disc pl-6 space-y-2">
-      <li><strong>Abstract Submission Deadline:</strong> March 15, 2024</li>
-      <li><strong>Notification of Acceptance:</strong> April 1, 2024</li>
-      <li><strong>Full Paper Submission Deadline:</strong> April 20, 2024</li>
-      <li><strong>Early Bird Registration:</strong> May 1, 2024</li>
-      <li><strong>Conference Dates:</strong> June 10–12, 2024</li>
+      <li><strong>Opening Date of Submission :</strong> February 15, 2025</li>
+      <li><strong>Last Date of Submission :</strong> June 31, 2025</li>
+      <li><strong>Acceptance Notiefication :</strong> August 30, 2025</li>
+      <li><strong>Submission of Final Manuscript & Copyright :</strong> September 15, 2025</li>
+      <li><strong>Early Bird Registration :</strong> September 30, 2025</li>
+      <li><strong>Conference Dates :</strong> October 29–31, 2025</li>
     </ul>
   </main>
   <!-- Footer -->
@@ -110,14 +130,14 @@
       <div class="row">
         <div class="col-md-4 my-3">
           <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> 30 E Lake St,
-            Chicago, USA</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (510) 710-3464</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: </span>
-            info@ICE2CPT.com
+          <p class="lead break text-justify">
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, Jharkhand, India
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: ice2cpt@gmail.com</span>
           </p>
         </div>
         <div class="col-md-2 my-3">
@@ -130,7 +150,7 @@
               <li class="menu-item mb-2">
                 <a href="about.html" class="footer-link">About us</a>
               </li>
-               <li class="menu-item mb-2">
+              <li class="menu-item mb-2">
                 <a href="contact.html" class="footer-link">Contact</a>
               </li>
             </ul>
@@ -179,7 +199,6 @@
                     <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
                   </a>
                 </li>
-
               </ul>
             </div>
           </div>
