--- a/callforpapers.html
+++ b/callforpapers.html
@@ -100,11 +100,16 @@
     <h1 class="text-4xl font-bold mb-4 mt-40">Call for Papers</h1>
     <p class="mb-4">The 5th Electric Power and Renewable Energy Conference invites submissions on the following themes:</p>
     <ul class="list-disc pl-5 space-y-2">
-      <li>Smart Grids and Microgrids</li>
-      <li>Renewable Energy Integration</li>
-      <li>Energy Storage Systems</li>
-      <li>Electric Vehicles and Infrastructure</li>
-      <li>AI in Power Systems</li>
+      <li>Control Systems and Automation</li>
+      <li>Advanced Power Electronics and Drives</li>
+      <li>Energy Storage and Battery Technologies</li>
+      <li>Power System Stability and Power Quality</li>
+      <li>Electromagnetic and Wireless Technologies</li>
+      <li>Signal Processing and Communication Systems</li>
+      <li>Renewable Energy Integration and Smart Grids</li>
+      <li>Embedded Systems and IoT in Power Applications</li>
+      <li>Emerging Trends in Electric Vehicles and Mobility</li>
+      <li>Artificial Intelligence and Machine Learning in Energy Systems</li>
     </ul>
     <p class="mt-4">Submit your paper by <strong>10th March 2024</strong>.</p>
   </main>
