--- a/callforpapers.html
+++ b/callforpapers.html
@@ -105,7 +105,7 @@
   </nav>
   <main class="container mx-auto p-6">
     <h1 class="text-4xl font-bold mb-4 mt-40">Call for Papers</h1>
-    <p class="mb-4">The 5th Electric Power and Renewable Energy Conference invites submissions on the following themes:</p>
+    <p class="mb-4">The 1st IEEE International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend Conference invites submissions on the following themes:</p>
     <ul class="list-disc pl-5 space-y-2">
       <li>Control Systems and Automation</li>
       <li>Advanced Power Electronics and Drives</li>
@@ -118,7 +118,7 @@
       <li>Emerging Trends in Electric Vehicles and Mobility</li>
       <li>Artificial Intelligence and Machine Learning in Energy Systems</li>
     </ul>
-    <p class="mt-4">Submit your paper by <strong>10th March 2024</strong>.</p>
+    <p class="mt-4">Submit your paper by <strong>31st June 2025</strong>.</p>
   </main>
   <footer id="footer">
     <div class="container padding-medium ">
