--- a/callforpapers.html
+++ b/callforpapers.html
@@ -125,14 +125,14 @@
       <div class="row">
         <div class="col-md-4 my-3">
           <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> 30 E Lake St,
-            Chicago, USA</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (510) 710-3464</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: </span>
-            info@ICE2CPT.com
+          <p class="lead break text-justify">
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, India
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: ice2cpt@gmail.com</span>
           </p>
         </div>
         <div class="col-md-2 my-3">
@@ -145,7 +145,7 @@
               <li class="menu-item mb-2">
                 <a href="about.html" class="footer-link">About us</a>
               </li>
-               <li class="menu-item mb-2">
+              <li class="menu-item mb-2">
                 <a href="contact.html" class="footer-link">Contact</a>
               </li>
             </ul>
@@ -194,7 +194,6 @@
                     <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
                   </a>
                 </li>
-
               </ul>
             </div>
           </div>
