--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
 
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 mx-auto">
 
-    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 40px;" >
+    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
       <div class="container d-flex justify-content-between align-items-center">
         <a target="_blank" href="https://nitjsr.ac.in/">
-          <img style="height: 55px;" src="images/NITJSRlOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="60" height="40">
+          <img style="height: 50px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 55px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="25">
+          <img style="height: 50px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="40">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a> -->
-        <a target="_blank" href="index.html">
-          <img style="height: 55px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
+          <img style="height: 50px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
         <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 55px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 50px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
@@ -258,8 +258,8 @@
         </div>
       </div>
       <div class="transparent-box">
-        <img src="images/logo.gif" width="240px" alt="Logo" class="box-logo">
-        <h2 class="box-title">International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend<br>
+        <img src="images/logo.gif" width="100px" alt="Logo" class="box-logo">
+        <h3 class="box-title">International Conference on Electrical, Electronics and Computer Science with Advance Power Technologies- A Future Trend<br>
           <br>OCTOBER 29 - 31 ,2025</h2>
       </div>
     </div>
@@ -273,6 +273,16 @@
     }
   }
 </style>
+
+<section id="service" class="padding- 10px ">
+  <div class="container">
+    <div class="text-center">
+      <h3 class="display-5 fw-semibold"><span style="color: blue;"> Welcome to ICE2CPT-2025</span></h3>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="countdown-paper" class="container-fluid my-5">
   <div class="row">
     <!-- Countdown Section (Left) -->
@@ -289,10 +299,8 @@
 
     <!-- Paper Submission Section (Right) -->
     <div class="col-md-6">
-      <div id="paper-submission" class="text-center p-4" style="background-color: rgba   1Z(255, 255, 255, 0.8); border-radius: 10px; box-shadow: 0px 0px 4px black, 0px 0px 4px black;">
-        <h2 class="mb-4">Paper Submission</h2>
-        <p class="mb-4">Submit your research papers for the conference.</p>
-        <button class="btn btn-primary">Submit Paper</button>
+      <div id="paper-submission" class="text-center p-2" style="background-color: rgba   1Z(255, 255, 255, 0.8); border-radius: 10px; box-shadow: 0px 0px 4px black, 0px 0px 4px black;">
+        <h2 class="mb-3">Paper Submission</h2> <button class="btn btn-primary">Submit Paper</button>
       </div>
     </div>
   </div>
@@ -467,24 +475,43 @@
       }
     }
   </style>
-  <section id="service" class="padding-medium">
+  <section id="service" class="padding- 15px ">
     <div class="container">
       <div class="text-justify">
-        <h2 class="display-5 fw-semibold">About the <span style="color: blue;"> Conference</span></h2>
-        <p class="secondary-font">ICE2CPT aims to provide a comprehensive platform for professionals, researchers, and industry experts to exchange knowledge and insights on emerging trends and innovations in electrical, electronics, and computer science domains. With a focus on advanced power technologies, the conference seeks to address critical challenges and opportunities in power systems, renewable energy integration, intelligent control systems, and energy-efficient solutions. Additionally, ICE2CPT emphasizes advancements in transmitter design, signal processing, signal transmission in channels, antenna design, and the design of overall control systems. The conference encourages interdisciplinary collaboration to explore the transformative potential of cutting-edge technologies, including artificial intelligence, IoT, and smart grids, in shaping the future of energy and communication systems. By fostering discussions on sustainable and innovative approaches, ICE2CPT aims to create a conducive environment for knowledge sharing and the development of next-generation solutions for a sustainable and interconnected future.</p>
+        <h3 class="display-5 fw-semibold">About the <span style="color: blue;"> Conference</span></h3>
+        <p class="secondary-font">International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend (ICE2CPT) aims to provide a comprehensive platform for professionals, researchers, and industry experts to exchange knowledge and insights on emerging trends and innovations in electrical, electronics, and computer science domains. With a focus on advanced power technologies, the conference seeks to address critical challenges and opportunities in power systems, renewable energy integration, intelligent control systems, and energy-efficient solutions. Additionally, ICE2CPT emphasizes advancements in transmitter design, signal processing, signal transmission in channels, antenna design, and the design of overall control systems. The conference encourages interdisciplinary collaboration to explore the transformative potential of cutting-edge technologies, including artificial intelligence, IoT, and smart grids, in shaping the future of energy and communication systems. By fostering discussions on sustainable and innovative approaches, ICE2CPT aims to create a conducive environment for knowledge sharing and the development of next-generation solutions for a sustainable and interconnected future.</p>
         </div>
       </div>
     </div>
   </section>
 
-  
+  <section id="service" class="padding- 15px ">
+    <div class="container">
+      <div class="text-justify">
+        <h3 class="display-5 fw-semibold">About <span style="color: blue;"> NIT Jamshedpur</span></h3>
+        <p class="secondary-font"> The National Institute of Technology Jamshedpur (NIT Jamshedpur), is an Institute of National Importance located at Jamshedpur, Jharkhand, India. Established as a Regional Institute of Technology in 1960, it was upgraded to NIT on 27 December 2002 with the status of Deemed University. It is one of the 31 NITs in India, and as such is directly under the control of the Ministry of Human Resource Development (MHRD). It is the third in the chain of eight NITs established as a part of the Second Five Year Plan (1956–61) by the Government of India. The Institute has twelve departments including engineering, science and humanities. The institute offers a 4-year Bachelor of Technology degree in the various streams. The institute also offers Master and Ph.D degrees in various streams. The institute is bound to the quest for academic excellence and good governance, growth of institute, admired and respected institute for students, employees and industry, innovative leader.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="service" class="padding- 15px ">
+    <div class="container">
+      <div class="text-justify">
+        <h3 class="display-5 fw-semibold">About <span style="color: blue;"> EE Department </span></h3>
+        <p class="secondary-font"> The Department of Electrical Engineering was started in 1960. The Department has been consistently producing quality Engineers since its inception and is also involved in research and development activities. The alumni of the department are well placed in both public and private sectors. In addition to the UG programme the department runs PG programme in Power Systems and Power Electronics and Drives and Ph.D. program in different areas of specialization. To emerge as a front-runner for catering latest needs of Power Sector, Electrical Industries, Public Service and to improve the quality of life with high human values. Imparting quality education and skills by establishing the state-of-the-art research facilities to students that further contributes to the socio–economic growth and eventually contributing to sustainable development of the society.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer id="footer">
-    <div class="container padding-medium ">
+    <div class="container padding-medium">
       <div class="row">
         <div class="col-md-4 my-3">
           <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
           <p class="lead break text-justify">
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, Jharkhand, India
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, India.
           </p>
           <p>
             <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
