--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img style="height: 50px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 50px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="40">
+          <img style="height: 50px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
@@ -223,41 +223,19 @@
     </div>
   </section> -->
   <section id="hero">
-    <div class="container-fluid">
+    <div class="container-fluid padding 10px">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-15">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active"> 
-                <img class="d-block img-fluid w-100 my-5 mx-auto border h-75 rounded p-2 py-5" src="images/nitj.jpg">
-              </div>
-              <div class="carousel-item"> 
-                <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-              <div class="carousel-item"> 
-                <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-moon.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
+                <img class="d-block img-fluid w-100 my-5 mx-auto border h-75 rounded p-2 py-5" src="images/nitj.jpg" >
               </div>
             </div> 
-            <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> 
-              <span class="carousel-control-prev-icon"></span> 
-              <span class="sr-only">Previous</span> 
-            </a> 
-            <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> 
-              <span class="carousel-control-next-icon"></span> 
-              <span class="sr-only">Next</span> 
-            </a>
           </div>
         </div>
       </div>
-      <div class="transparent-box">
+      <div class="transparent-box padding- 10px">
         <img src="images/logo.gif" width="100px" alt="Logo" class="box-logo">
         <h3 class="box-title">International Conference on Electrical, Electronics and Computer Science with Advance Power Technologies- A Future Trend<br>
           <br>OCTOBER 29 - 31 ,2025</h2>
@@ -475,30 +453,31 @@
       }
     }
   </style>
-  <section id="service" class="padding- 15px ">
+
+  <section id="service" class="padding- 20px ">
     <div class="container">
       <div class="text-justify">
-        <h3 class="display-5 fw-semibold">About the <span style="color: blue;"> Conference</span></h3>
+        <h2 class="display-7 fw-semibold">About the <span style="color: blue;"> Conference</span></h2>
         <p class="secondary-font">International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend (ICE2CPT) aims to provide a comprehensive platform for professionals, researchers, and industry experts to exchange knowledge and insights on emerging trends and innovations in electrical, electronics, and computer science domains. With a focus on advanced power technologies, the conference seeks to address critical challenges and opportunities in power systems, renewable energy integration, intelligent control systems, and energy-efficient solutions. Additionally, ICE2CPT emphasizes advancements in transmitter design, signal processing, signal transmission in channels, antenna design, and the design of overall control systems. The conference encourages interdisciplinary collaboration to explore the transformative potential of cutting-edge technologies, including artificial intelligence, IoT, and smart grids, in shaping the future of energy and communication systems. By fostering discussions on sustainable and innovative approaches, ICE2CPT aims to create a conducive environment for knowledge sharing and the development of next-generation solutions for a sustainable and interconnected future.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="service" class="padding- 15px ">
+  <section id="service" class="padding- 20px ">
     <div class="container">
       <div class="text-justify">
-        <h3 class="display-5 fw-semibold">About <span style="color: blue;"> NIT Jamshedpur</span></h3>
+        <h3 class="display-7 fw-semibold">About <span style="color: blue;"> NIT Jamshedpur</span></h3>
         <p class="secondary-font"> The National Institute of Technology Jamshedpur (NIT Jamshedpur), is an Institute of National Importance located at Jamshedpur, Jharkhand, India. Established as a Regional Institute of Technology in 1960, it was upgraded to NIT on 27 December 2002 with the status of Deemed University. It is one of the 31 NITs in India, and as such is directly under the control of the Ministry of Human Resource Development (MHRD). It is the third in the chain of eight NITs established as a part of the Second Five Year Plan (1956–61) by the Government of India. The Institute has twelve departments including engineering, science and humanities. The institute offers a 4-year Bachelor of Technology degree in the various streams. The institute also offers Master and Ph.D degrees in various streams. The institute is bound to the quest for academic excellence and good governance, growth of institute, admired and respected institute for students, employees and industry, innovative leader.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="service" class="padding- 15px ">
+  <section id="service" class="padding- 20px ">
     <div class="container">
       <div class="text-justify">
-        <h3 class="display-5 fw-semibold">About <span style="color: blue;"> EE Department </span></h3>
+        <h3 class="display-7 fw-semibold">About <span style="color: blue;"> EE Department </span></h3>
         <p class="secondary-font"> The Department of Electrical Engineering was started in 1960. The Department has been consistently producing quality Engineers since its inception and is also involved in research and development activities. The alumni of the department are well placed in both public and private sectors. In addition to the UG programme the department runs PG programme in Power Systems and Power Electronics and Drives and Ph.D. program in different areas of specialization. To emerge as a front-runner for catering latest needs of Power Sector, Electrical Industries, Public Service and to improve the quality of life with high human values. Imparting quality education and skills by establishing the state-of-the-art research facilities to students that further contributes to the socio–economic growth and eventually contributing to sustainable development of the society.</p>
         </div>
       </div>
