--- a/index.html
+++ b/index.html
@@ -236,9 +236,7 @@
         </div>
       </div>
       <div class="transparent-box padding- 10px">
-        <img src="images/logo.gif" width="100px" alt="Logo" class="box-logo">
-        <h3 class="box-title">International Conference on Electrical, Electronics and Computer Science with Advance Power Technologies- A Future Trend<br>
-          <br>OCTOBER 29 - 31 ,2025</h2>
+       <img style="height: 200px;" src="images/trans.png" width="550px" alt="" class="">
       </div>
     </div>
   </section>
