--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
     <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
       <div class="container d-flex justify-content-between align-items-center">
         <a target="_blank" href="https://nitjsr.ac.in/">
-          <img style="height: 50px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
+          <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
         <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 50px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+          <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
         </a>
         <!-- <a href="index.html">
           <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a> -->
         <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
-          <img style="height: 50px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
         <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 50px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
@@ -223,23 +223,24 @@
     </div>
   </section> -->
   <section id="hero">
-    <div class="container-fluid padding 10px">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-15">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active"> 
-                <img class="d-block img-fluid w-100 my-5 mx-auto border h-75 rounded p-2 py-5" src="images/nitj.jpg" >
+                <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="images/nitj.jpg" >
               </div>
             </div> 
           </div>
         </div>
       </div>
-      <div class="transparent-box padding- 10px">
-       <img style="height: 200px;" src="images/trans.png" width="550px" alt="" class="">
+      <div class="transparent-box">
+        <img style="height: 200px;" src="images/trans.png" width="550px" alt="" class="">
       </div>
     </div>
   </section>
+
 
 </section>
 <style> @media (min-width: 992px) { /* Applies to large screens (≥992px) */
