--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <section id="service" class="padding- 10px ">
   <div class="container">
     <div class="text-center">
-      <h3 class="display-5 fw-semibold"><span style="color: blue;"> Welcome to ICE2CPT-2025</span></h3>
+      <h3 class="display-5 fw-semibold"><span style="color: rgb(17, 17, 112);"> Welcome to ICE2CPT-2025</span></h3>
       </div>
     </div>
   </div>
