--- a/crucialdates.html
+++ b/crucialdates.html
@@ -34,26 +34,27 @@
         </a>
       </div>
     </div> -->
-    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 40px;" >
-      <div class="container d-flex justify-content-between align-items-center">
-        <a target="_blank" href="https://nitjsr.ac.in/">
-          <img style="height: 55px;" src="images/NITJSRlOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="60" height="40">
-        </a>
-        <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-          <img style="height: 55px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="25">
-        </a>
-        <!-- <a href="index.html">
-          <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-        </a> -->
-        <a target="_blank" href="index.html">
-          <img style="height: 55px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-        </a>
-        <a target="_blank" href="https://www.ieee.org/">
-          <img style="height: 55px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-        </a>
+      <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
+        <div class="container d-flex justify-content-between align-items-center">
+          <a target="_blank" href="https://nitjsr.ac.in/">
+            <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
+          </a>
+          <a target="_blank" href="https://ieeenitjsr.netlify.app/">
+            <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+          </a>
+          <!-- <a href="index.html">
+            <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          </a> -->
+          <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
+            <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          </a>
+          <a target="_blank" href="https://www.ieee.org/">
+            <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+          </a>
+        </div>
       </div>
-    </div>
   
+
     <!-- Main Navbar -->
     <div class="container-fluid">
       <div class="main-logo">
@@ -117,7 +118,7 @@
     <p class="mb-6">Below are the important dates for the conference. Please make sure to adhere to these deadlines.</p>
     <ul class="list-disc pl-6 space-y-2">
       <li><strong>Opening Date of Submission :</strong> February 15, 2025</li>
-      <li><strong>Last Date of Submission :</strong> June 31, 2025</li>
+      <li><strong>Last Date of Submission :</strong> June 30, 2025</li>
       <li><strong>Acceptance Notiefication :</strong> August 30, 2025</li>
       <li><strong>Submission of Final Manuscript & Copyright :</strong> September 15, 2025</li>
       <li><strong>Early Bird Registration :</strong> September 30, 2025</li>
