--- a/callforpapers.html
+++ b/callforpapers.html
@@ -26,25 +26,28 @@
   <!-- Header -->
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 mx-auto">
 
-      <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
-        <div class="container d-flex justify-content-between align-items-center">
-          <a target="_blank" href="https://nitjsr.ac.in/">
-            <img style="height: 50px;" src="images/NITJSRlOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="60" height="40">
-          </a>
-          <a target="_blank" href="https://ieeenitjsr.netlify.app/">
-            <img style="height: 50px;" src="images/nitiee.png" alt="logo" class="mb-1 mx-auto img-fluid" width="70" height="25">
-          </a>
-          <!-- <a href="index.html">
-            <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-          </a> -->
-          <a target="_blank" href="index.html">
-            <img style="height: 50px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-          </a>
-          <a target="_blank" href="https://www.ieee.org/">
-            <img style="height: 50px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
-          </a>
-        </div>
+    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
+      <div class="container d-flex justify-content-between align-items-center">
+        <a target="_blank" href="https://nitjsr.ac.in/">
+          <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
+        </a>
+        <a target="_blank" href="https://ieeenitjsr.netlify.app/">
+          <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+        </a>
+        <!-- <a href="index.html">
+          <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a> -->
+        <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
+          <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a>
+        <a target="_blank" href="https://www.ieee.org/">
+          <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a>
       </div>
+    </div>
+
+
+
   
     <!-- Main Navbar -->
     <div class="container-fluid">
@@ -118,7 +121,7 @@
       <li>Emerging Trends in Electric Vehicles and Mobility</li>
       <li>Artificial Intelligence and Machine Learning in Energy Systems</li>
     </ul>
-    <p class="mt-4">Submit your paper by <strong>31st June 2025</strong>.</p>
+    <p class="mt-4">Submit your paper by <strong>30th June 2025</strong>.</p>
   </main>
   <footer id="footer">
     <div class="container padding-medium ">
