--- a/venue.html
+++ b/venue.html
@@ -23,16 +23,22 @@
     <!-- Header -->
     <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-lg-4 py-lg-4 mx-auto">
         <!-- Links above the navbar -->
-        <div class="w-100 bg-light py-2 border-bottom">
+        <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
           <div class="container d-flex justify-content-between align-items-center">
-            <a href="faq.html" class="text-dark text-decoration-none">1</a>
-            <a href="support.html" class="text-dark text-decoration-none">2</a>
-            <a href="contact.html" class="text-dark text-decoration-none">3</a>
-            <a href="index.html">
-              <img style="height: 25px;" src="images/IEEE_kol_logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="40" height="25">
+            <a target="_blank" href="https://nitjsr.ac.in/">
+              <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
             </a>
-            <a href="index.html">
-              <img style="height: 25px;" src="images/IEEE-Banglore.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="25">
+            <a target="_blank" href="https://ieeenitjsr.netlify.app/">
+              <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+            </a>
+            <!-- <a href="index.html">
+              <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+            </a> -->
+            <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
+              <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+            </a>
+            <a target="_blank" href="https://www.ieee.org/">
+              <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
             </a>
           </div>
         </div>
